--- a/src/main/java/com/azzgil/homelibrary/views/theme.css
+++ b/src/main/java/com/azzgil/homelibrary/views/theme.css
@@ -4,12 +4,24 @@
 
 .radio-button {
     -fx-background-color: transparent;
-    -fx-padding: 20px 0px 20px 34px;
-    -fx-font-size: 14pt;
+    -fx-padding: 8px 0px 8px 0px;
+    -fx-font-size: 13pt;
 }
 
 .radio-button:selected {
     -fx-background-color: gray;
+}
+
+.radio-button .dot {
+    -fx-mark-highlight-color: transparent ;
+    -fx-mark-color: transparent;
+}
+
+.radio-button .radio {
+    -fx-background-color: transparent;
+    /*-fx-background-image: null;*/
+    -fx-image: null;
+    -fx-color: transparent;
 }
 
 .left-panel {
@@ -18,6 +30,19 @@
     -fx-border-width: 0 1 0 0;
 }
 
+.label-home-library {
+    -fx-font-size: 20pt;
+}
+
 .label-book-title {
-    -fx-font-size: 18pt;
+    -fx-font-size: 16pt;
+}
+
+.label-author {
+    -fx-text-fill: #616161;
+}
+
+.common-page {
+    -fx-padding: 8px 0px 8px -16px;
+    -fx-font-size: 20px;
 }
