--- a/src/main/java/com/azzgil/homelibrary/views/LibraryOverview.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/LibraryOverview.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.azzgil.homelibrary.views.LibraryOverviewController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" styleClass="label-home-library" stylesheets="@theme.css" text="Домашняя библиотека" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0" />
+      <Label layoutX="14.0" layoutY="14.0" styleClass="label-section-title" stylesheets="@theme.css" text="Домашняя библиотека" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0" />
       <GridPane layoutX="16.0" layoutY="55.0" prefHeight="90.0" prefWidth="322.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="94.0" />
