--- a/src/main/java/com/azzgil/homelibrary/views/GenresOverview.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/GenresOverview.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -10,7 +11,7 @@
          <children>
             <HBox alignment="CENTER_RIGHT" prefHeight="52.0" prefWidth="600.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#onAddGenreBtnClick" text="Добавить жанр" />
+                  <Button mnemonicParsing="false" onAction="#onAddGenreBtn" text="Добавить жанр" />
                </children>
                <opaqueInsets>
                   <Insets />
@@ -24,11 +25,7 @@
             </HBox>
          </children>
       </VBox>
-      <ScrollPane layoutX="14.0" layoutY="60.0" prefHeight="326.0" prefViewportHeight="200.0" prefViewportWidth="572.0" prefWidth="572.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="60.0">
-         <content>
-            <TreeView fx:id="treeView" layoutX="14.0" layoutY="50.0" prefHeight="326.0" prefWidth="569.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0" />
-         </content>
-      </ScrollPane>
+      <TreeView fx:id="treeView" prefHeight="326.0" prefWidth="569.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0" />
       <Label styleClass="label-section-title" text="Жанры" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
    </children>
 </AnchorPane>
