added genres delete/multi-delete feature (needs some improvement later - need to decide what to do if user wants to delete some genre but there is still at least one book of that genre)

--- a/src/main/java/com/azzgil/homelibrary/views/RootLayout.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/RootLayout.fxml
@@ -53,6 +53,7 @@
                 <Menu mnemonicParsing="false" text="Редактирование">
                   <items>
                     <MenuItem fx:id="editMI" mnemonicParsing="false" onAction="#onEdit" text="Редактировать" />
+                        <MenuItem fx:id="deleteMI" mnemonicParsing="false" onAction="#onDelete" text="Удалить" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Помощь">
