--- a/src/main/java/com/azzgil/homelibrary/views/GenresOverview.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/GenresOverview.fxml
@@ -7,24 +7,22 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.azzgil.homelibrary.views.GenresOverviewController">
    <children>
-      <VBox maxHeight="50.0" prefHeight="50.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox alignment="CENTER_RIGHT" fillHeight="false" maxHeight="50.0" prefHeight="50.0" prefWidth="600.0" spacing="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="CENTER_RIGHT" prefHeight="52.0" prefWidth="600.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#onAddGenreBtn" text="Добавить жанр" />
-               </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
+            <Button fx:id="showBooksBtn" mnemonicParsing="false" onAction="#showBooks" />
+            <Button fx:id="addGenreBtn" mnemonicParsing="false" onAction="#create" text="Добавить жанр">
+               <HBox.margin>
                   <Insets right="8.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="14.0" />
-               </VBox.margin>
-            </HBox>
+               </HBox.margin>
+            </Button>
          </children>
-      </VBox>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets right="8.0" />
+         </padding>
+      </HBox>
       <TreeView fx:id="treeView" prefHeight="326.0" prefWidth="569.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0" />
       <Label styleClass="label-section-title" text="Жанры" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
    </children>
