--- a/src/main/java/com/azzgil/homelibrary/views/LibraryOverview.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/LibraryOverview.fxml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.azzgil.homelibrary.views.LibraryOverviewController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" styleClass="label-section-title" stylesheets="@theme.css" text="Домашняя библиотека" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0" />
-      <GridPane layoutX="16.0" layoutY="55.0" prefHeight="90.0" prefWidth="322.0">
+      <GridPane layoutX="16.0" layoutY="55.0" prefHeight="117.0" prefWidth="322.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="94.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="236.0" minWidth="10.0" prefWidth="228.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="101.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="236.0" minWidth="10.0" prefWidth="221.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Всего книг:" />
-            <Label text="Друзей:" GridPane.rowIndex="2" />
+            <Label text="Друзей:" GridPane.rowIndex="3" />
             <Label text="Жанров:" GridPane.rowIndex="1" />
             <Label fx:id="booksCountLbl" GridPane.columnIndex="1" />
             <Label fx:id="genresCountLbl" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="friendsCountLbl" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="friendsCountLbl" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Издательств:" GridPane.rowIndex="2" />
+            <Label fx:id="pubHousesCountLbl" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
