added some convenient buttons to interface

--- a/src/main/java/com/azzgil/homelibrary/views/GenresOverview.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/GenresOverview.fxml
@@ -9,6 +9,8 @@
    <children>
       <HBox alignment="CENTER_RIGHT" fillHeight="false" maxHeight="50.0" prefHeight="50.0" prefWidth="600.0" spacing="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
+            <Button fx:id="editBtn" mnemonicParsing="false" onAction="#update" />
+            <Button fx:id="deleteBtn" mnemonicParsing="false" onAction="#delete" />
             <Button fx:id="showBooksBtn" mnemonicParsing="false" onAction="#showBooks" />
             <Button fx:id="addGenreBtn" mnemonicParsing="false" onAction="#create" text="Добавить жанр">
                <HBox.margin>
@@ -23,7 +25,17 @@
             <Insets right="8.0" />
          </padding>
       </HBox>
-      <TreeView fx:id="treeView" prefHeight="326.0" prefWidth="569.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0" />
+      <TreeView fx:id="treeView" prefHeight="326.0" prefWidth="569.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0">
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#create" text="Добавить жанр..." />
+                  <MenuItem fx:id="editMI" mnemonicParsing="false" onAction="#update" text="Редактировать" />
+                  <MenuItem fx:id="deleteMI" mnemonicParsing="false" onAction="#delete" text="Удалить выбранное" />
+                  <MenuItem fx:id="showBooksMI" mnemonicParsing="false" onAction="#showBooks" text="Показать книги этого жанра" />
+              </items>
+            </ContextMenu>
+         </contextMenu></TreeView>
       <Label styleClass="label-section-title" text="Жанры" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
    </children>
 </AnchorPane>
