--- a/src/main/java/com/azzgil/homelibrary/views/FriendsOverview.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/FriendsOverview.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.azzgil.homelibrary.views.FriendsOverviewController">
    <children>
       <HBox alignment="CENTER_RIGHT" maxHeight="50.0" prefHeight="50.0" prefWidth="600.0" spacing="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" />
-            <Button mnemonicParsing="false" />
-            <Button mnemonicParsing="false" />
-            <Button mnemonicParsing="false" text="Добавить друга">
+            <Button fx:id="updateBtn" mnemonicParsing="false" onAction="#update" />
+            <Button fx:id="deleteBtn" mnemonicParsing="false" onAction="#delete" />
+            <Button fx:id="detailsBtn" mnemonicParsing="false" />
+            <Button fx:id="addFriendBtn" mnemonicParsing="false" onAction="#create" text="Добавить друга">
                <HBox.margin>
                   <Insets right="8.0" />
                </HBox.margin>
@@ -25,8 +25,7 @@
             <Insets right="8.0" />
          </padding>
       </HBox>
-      <Label styleClass="label-section-title" text="Друзья" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-      <ListView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0">
+      <Label styleClass="label-section-title" text="Друзья" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
          <contextMenu>
             <ContextMenu>
               <items>
@@ -36,6 +35,21 @@
                   <MenuItem mnemonicParsing="false" text="Показать книги этого издательства" />
               </items>
             </ContextMenu>
-         </contextMenu></ListView>
+         </contextMenu></Label>
+      <TableView fx:id="tableView" editable="true" layoutX="38.0" layoutY="60.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#create" text="Добавить друга..." />
+                  <MenuItem mnemonicParsing="false" onAction="#update" text="Редактировать" />
+                  <MenuItem mnemonicParsing="false" onAction="#delete" text="Удалить выбранных" />
+                  <MenuItem mnemonicParsing="false" text="Показать информацию о взятых книгах" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
+      </TableView>
    </children>
 </AnchorPane>
