final stage! not realized:  - show book borrowing history  - show overall borrowing history  - show friend borrowing history

--- a/src/main/java/com/azzgil/homelibrary/views/BookPanel.fxml
+++ b/src/main/java/com/azzgil/homelibrary/views/BookPanel.fxml
@@ -6,6 +6,7 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="420.0" minHeight="249.0" minWidth="600.0" prefHeight="249.0" prefWidth="600.0" styleClass="book-panel" stylesheets="@theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.azzgil.homelibrary.views.BookPanelController">
    <children>
+      <Label fx:id="bookPersistenceLbl" text="в наличии" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="0.0" />
       <Label fx:id="bookTitleLbl" layoutX="34.0" layoutY="14.0" maxWidth="350.0" styleClass="label-book-title" text="Название книги" wrapText="true" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="-6.0" />
       <GridPane layoutX="18.0" layoutY="47.0" prefHeight="90.0" prefWidth="531.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="64.0">
         <columnConstraints>
@@ -52,6 +53,8 @@
          <children>
             <Button fx:id="deleteBtn" mnemonicParsing="false" onAction="#onDeleteBtn" />
             <Button fx:id="editBtn" mnemonicParsing="false" onAction="#onEditBtn" />
+            <Button fx:id="showBorrowingHistoryBtn" mnemonicParsing="false" />
+            <Button fx:id="giveOrReturnBtn" mnemonicParsing="false" />
          </children>
       </HBox>
    </children>
